completes skill section and fixes some layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -33,9 +33,8 @@
 }
 
 body {
-    font-family: 'Conv_Roboto-Regular', sans-serif;
-    font-size: 12px;
-    line-height: 1.5;
+    font-size: 1.5em;
+    line-height: 1.4;
     color: #333;
 }
 
@@ -73,10 +72,6 @@ header a:active {
 
 header h1 {
     font-size: 5em;
-}
-
-.container {
-    padding: 0 3em;
 }
 
 section h3 {
@@ -130,7 +125,6 @@ h4 {
 
 li {
     font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
-    font-size: 14px;
 }
 
 .page-break {
@@ -159,4 +153,22 @@ li {
 
 #contact-info li i {
     padding-right: 8px;
+}
+
+#skill-container ul {
+    -webkit-columns: 4 100px;
+    -moz-columns: 4 100px;
+    columns: 4 100px;
+
+    padding: 0;
+    margin: 0;
+}
+
+#skill-container ul li {
+    list-style: none;
+}
+
+.highlights {
+    list-style: circle;
+    padding-left: 1.75em;
 }
